--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
-<!DOCTYPE>
-<lang="es">
-<html>
- <head>
- <title>MULTIACCESO</title>
- <!-- Aquí va la información del head de tu página web, tales como enlaces, escripts, o los meta -->
- </head>
- <body>
- DESCARGA
- <!-- Aquí va el contenido de tu página web -->
- </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Datos para Transferencia - Banco Provincia</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background: #f8f9fa;
+        padding: 40px;
+        text-align: center;
+    }
+    .box {
+        background: #fff;
+        padding: 25px;
+        border: 1px solid #ccc;
+        max-width: 420px;
+        margin: auto;
+        border-radius: 8px;
+    }
+    h2 {
+        margin-bottom: 10px;
+    }
+    h3 {
+        margin-top: 0;
+        color: #2a7b2a;
+        font-weight: bold;
+    }
+    p {
+        font-size: 18px;
+        line-height: 1.6;
+    }
+</style>
+</head>
+<body>
+
+<div class="box">
+    <h2>Datos para Transferencia</h2>
+    <h3>Banco Provincia</h3>
+
+    <p><strong>Alias:</strong><br> Internet.Multiacceso</p>
+    <p><strong>CBU:</strong><br> 0140023603506864203708</p>
+    <p><strong>Titular:</strong><br> Cristian Roly Velasquez Burgoa</p>
+    <p><strong>CUIT:</strong><br> 20-95017739-0</p>
+</div>
+
+</body>
 </html>
