--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Datos para Transferencia - Banco Provincia</title>
+
+<!-- Evita que iPhone convierta números en enlaces -->
+<meta name="format-detection" content="telephone=no">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -15,6 +20,7 @@
         align-items: center;
         min-height: 100vh;
     }
+
     .box {
         background: #fff;
         padding: 25px;
@@ -22,13 +28,15 @@
         border-radius: 8px;
         max-width: 420px;
         width: 100%;
-        box-shadow: 0 0 10px rgba(0,0,0,0.08);
         text-align: center;
+        box-shadow: 0 0 10px rgba(0,0,0,0.08);
     }
+
     h2 {
         margin-bottom: 10px;
         font-size: 24px;
     }
+
     h3 {
         margin-top: 0;
         margin-bottom: 20px;
@@ -36,17 +44,20 @@
         font-weight: bold;
         font-size: 20px;
     }
+
     p {
         font-size: 18px;
         line-height: 1.6;
         margin: 18px 0;
     }
+
     .dato {
         display: inline-flex;
         align-items: center;
         gap: 8px;
         word-break: break-word;
     }
+
     .copy-icon {
         width: 20px;
         height: 20px;
@@ -54,25 +65,30 @@
         opacity: 0.7;
         transition: 0.2s ease;
     }
+
     .copy-icon:hover {
         opacity: 1;
     }
+
     .copied {
         filter: hue-rotate(90deg) brightness(1.3);
         opacity: 1 !important;
     }
-    .no-link {
-        pointer-events: none;
-        text-decoration: none;
-        color: #000;
-        user-select: text;
+
+    /* Evita que CUIT y CBU se conviertan en enlaces */
+    a, a:visited, a:active {
+        color: inherit !important;
+        text-decoration: none !important;
+        pointer-events: none !important;
     }
+
     @media (max-width: 480px) {
         h2 { font-size: 22px; }
         h3 { font-size: 18px; }
         p { font-size: 16px; }
     }
 </style>
+
 <script>
     function copiar(texto, iconoId) {
         navigator.clipboard.writeText(texto);
@@ -81,6 +97,7 @@
         setTimeout(() => icono.classList.remove("copied"), 800);
     }
 </script>
+
 </head>
 <body>
 
@@ -117,3 +134,4 @@
 
 </body>
 </html>
+
